# eddie_description

./: CMakeLists.txt  README.md  dep.repos  package.xml
.github/workflows/: build.yml  ci_dep.repos
config/: eddie_controllers  initial_positions_arm_left.yaml  initial_positions_arm_right.yaml  zero_positions.yaml
config/rviz/: eddie.rviz  eddie_rviz_config.rviz
eddie_base_description/: CMakeLists.txt  eddie_rviz_config.rviz  eddie_wheel_unit.rviz  package.xml
eddie_base_description/launch/: eddie_display.launch.py
eddie_base_description/meshes/: hub_wheel.stl
eddie_base_description/urdf/: eddie_base.macro.xacro  eddie_base_gz.urdf.xacro  eddie_robot.urdf.xacro  kelo_wheel_gz.urdf.xacro  materials.urdf.xacro  wheel.macro.xacro  wheels_with_kelo_drive.macro.xacro
eddie_base_description/urdf/sensors/: hokuyo.urdf.xacro
eddie_description/: CMakeLists.txt  package.xml
eddie_description/config/: eddie.rviz  ros2_controllers.yaml  zero_positions.yaml
eddie_description/launch/: view_eddie.launch.py
eddie_description/robots/: eddie.urdf.xacro  eddie_gz.urdf.xacro  kortex.ros2_gz_control.xacro  kortex_robot.xacro
eddie_torso_description/: CMakeLists.txt  package.xml
eddie_torso_description/urdf/: eddie_torso_gz.urdf.xacro
eddie_torso_description/urdf/sensors/: hokuyo.urdf.xacro
eddie_urdf/eddie_meshes/: base_link.dae  bracelet_no_vision_link.dae  bracelet_with_vision_link.dae  forearm_link.dae  half_arm_1_link.dae  half_arm_2_link.dae  kelo_drive_attachments.stl  shoulder_link.dae  spherical_wrist_1_link.dae  spherical_wrist_2_link.dae
eddie_urdf/eddie_meshes/collision/2f_85/: left_finger.stl  left_finger_tip.stl  left_inner_knuckle.stl  left_knuckle.stl  right_finger.stl  right_finger_tip.stl  right_inner_knuckle.stl  right_knuckle.stl  robotiq_base.stl  ur_to_robotiq_adapter.stl
eddie_urdf/eddie_meshes/visual/2f_85/: left_finger.dae  left_finger_tip.dae  left_inner_knuckle.dae  left_knuckle.dae  right_finger.dae  right_finger_tip.dae  right_inner_knuckle.dae  right_knuckle.dae  robotiq_base.dae  ur_to_robotiq_adapter.dae
freddy_base_description/: CMakeLists.txt  package.xml
freddy_base_description/urdf/: freddy_base_gz.urdf.xacro  freddy_base_gz_vel_controller.urdf.xacro  freddy_base_mecanum_gz.urdf.xacro  freddy_base_old_gz.urdf.xacro  kelo_double_wheel_gz.urdf.xacro  kelo_wheel_gz.urdf.xacro  kelo_wheel_mecanum_gz.urdf.xacro
freddy_description/: CMakeLists.txt  package.xml
freddy_description/config/: freddy.rviz  initial_positions.yaml  initial_positions_arm_left.yaml  initial_positions_arm_right.yaml  initial_positions_right.yaml  ros2_controllers_double_wheel.yaml
freddy_description/launch/: view_freddy.launch.py
freddy_description/robots/: freddy.urdf.xacro  freddy_arms_gz.urdf.xacro  freddy_gz.urdf.xacro  freddy_gz_old.urdf.xacro  freddy_gz_torso.urdf.xacro  freddy_gz_torso1.urdf.xacro  freddy_gz_vel_controller.urdf.xacro  freddy_mecanum_gz.urdf.xacro  freddy_old_gz.urdf.xacro
freddy_description/ros2_control/: freddy_gz.ros2_control.xacro
freddy_torso_description/: CMakeLists.txt  package.xml
freddy_torso_description/urdf/: freddy_torso.urdf.xacro  freddy_torso_gz.urdf.xacro
launch/: display_eddie.launch.py  eddie_display.launch.py  load_eddie.launch.py
meshes/: hub_wheel.stl
urdf/: eddie_base.macro.xacro  eddie_robot.urdf.xacro  kelo_drive_unit.macro.xacro  kelo_hub_wheel.macro.xacro  kinova_gen3.macro.xacro  kortex.ros2_gz_control.macro.xacro  materials.xacro  wheel.macro.xacro  wheels_with_kelo_drive.macro.xacro
urdf/sensors/: common.xacro  hokuyo.urdf.xacro
