<?xml version="1.0"?>
<package format="2">
  <name>eddie_description</name>
  <version>0.0.0</version>
  <description>The eddie_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="vamsi.kalagaturu@uni-bremen.de">Vamsi</maintainer>
  <maintainer email="kishan.sawant@uni-bremen.de">Kishan</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>

  <!-- Export build information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
